[FIXED] Libary title alignment

--- a/rapbook/css/main.css
+++ b/rapbook/css/main.css
@@ -1,5 +1,14 @@
 
 
+.libary {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  padding: 0 20px;
+  margin-left: 3%;
+  box-sizing: border-box; }
+
+
 
 /********************* SVG ICONS *********************/
 .heart-icon {
